MDEV-36484 Atomic DDL: Assertion `!param->got_error' failed upon unsuccessful multi-RENAME TABLE

When executing an atomic sequence of RENAME operations, such as:
    RENAME TABLE t1 TO t2, t3 TO t4, ...
any failure in the sequence triggers a rollback of previously completed
renames to preserve atomicity.

However, when an error occurs, `my_error()` is invoked immediately, which
sets the `thd->is_error()` flag. This premature flag setting causes
the rollback logic to misinterpret the thread state, leading to incorrect
reversion behavior and assertion failures.

To address this, the error is now captured and deferred — stored during
the failure and only passed to `my_error()` after the DDL reversion
is complete. This ensures the error state is not prematurely set, allowing
the rollback logic to execute safely and correctly.